buildscript {
    ext {
        queryDslVersion = "5.0.0"
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.10'
    id 'io.spring.dependency-management' version '1.1.4'
    //querydsl 추가
    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

test {
    exclude '**/*'
}

repositories {
    mavenCentral()
}

dependencies {
    // jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

    // validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // aop
    annotationProcessor 'org.springframework.boot:spring-boot-starter-aop'

    // bootstrap,jquery,fontawesome
    implementation 'org.webjars.bower:jquery:3.6.3'
    implementation 'org.webjars:jquery-form:4.2.2'
    implementation 'org.webjars:font-awesome:6.1.1'
    implementation 'org.webjars:bootstrap:5.2.0'

    implementation 'org.springframework.boot:spring-boot-starter-web'

    // security
    implementation 'org.springframework.boot:spring-boot-starter-security:3.1.0'
    implementation 'org.springframework.security:spring-security-core:6.1.0'

    // Swagger
    implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'

    // jackson
    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'

    // 직렬화 이슈로 추가한 라이브러리
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.7'

    // ImageScaling
    implementation 'com.jhlabs:filters:2.0.235-1'
    implementation 'com.mortennobel:java-image-scaling:0.8.6'

    // apache poi
    implementation 'org.apache.poi:poi:5.0.0'
    implementation 'org.apache.poi:poi-ooxml:5.0.0'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.0.4'
    implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.1'
    // redisson
    implementation 'org.redisson:redisson-spring-boot-starter:3.18.0'
    //redis-session
    implementation 'org.springframework.session:spring-session-data-redis'

    // spring retry
    implementation 'org.springframework.retry:spring-retry:2.0.1'

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
    implementation 'org.springframework.boot:spring-boot-starter-mail:2.2.6.RELEASE'

    //selenium
    implementation 'org.seleniumhq.selenium:selenium-java'

    //thumbnail
    implementation 'net.coobird:thumbnailator:0.4.14'
    implementation 'commons-fileupload:commons-fileupload:1.4'
    implementation 'com.opencsv:opencsv:5.5'

    // querydsl
    implementation 'com.querydsl:querydsl-jpa'
    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.2'
    testImplementation 'org.springframework.security:spring-security-test:5.6.7'
}

// Querydsl 설정부
//def generated = 'src/main/generated'

// querydsl QClass 파일 생성 위치를 지정
//tasks.withType(JavaCompile) {
//    options.getGeneratedSourceOutputDirectory().set(file(generated))
//}

// java source set 에 querydsl QClass 위치 추가
//sourceSets {
//    main.java.srcDirs += [ generated ]
//}

// gradle clean 시에 QClass 디렉토리 삭제
//clean {
//    delete file(generated)
//}
tasks.named('test') {
    useJUnitPlatform()
}

//querydsl 추가 시작
def querydslDir = "$buildDir/generated/querydsl"
querydsl {
    jpa = true
    querydslSourcesDir = querydslDir
}
sourceSets {
    main.java.srcDir querydslDir
}
configurations {
    querydsl.extendsFrom compileClasspath
}
compileQuerydsl {
    options.annotationProcessorPath = configurations.querydsl
}
//querydsl 추가 끝